--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
 <body class="bg-white">
   <!-- NavBar -->
   <nav
-    class="px-4 flex items-center justify-between pt-4 pb-4 mb-6 mx-auto bg-white fixed top-0 left-0 right-0 z-50 backdrop-blur-xl ">
+    class="px-4 flex items-center justify-between pt-4 pb-4  mx-auto bg-white fixed top-0 left-0 right-0 z-50 backdrop-blur-xl ">
     <div class="max-w-1/3">
       <a href="./index.html">
-       <img src="img/logo.png" class="w-[250px]" alt="">
+        <img src="img/logo.png" class="w-[250px]" alt="">
       </a>
     </div>
-    <div
-      class="hidden container  font-regular flex-row items-center pr-14 justify-center space-x-10 md:flex max-w-1/3">
+    <div class="hidden container  font-regular flex-row items-center pr-14 justify-center space-x-10 md:flex max-w-1/3">
       <a href="#" class="hover:font-semibold ">About</a>
       <a href="./about.html" class="hover:font-semibold ">Portfolio</a>
       <a href="./contact.html" class="hover:font-semibold ">Team</a>
@@ -49,17 +48,22 @@
     </div> -->
 
     <div class="max-w-1/3 flex flex-row items-center justify-end pr-8 text font-semibold button-effect">
-      <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5"  id="button">Apply</button>
+      <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button>
     </div>
   </nav>
   <!-- Intro Section -->
-  <section id="intro">
-    <div
-      class="container mt-44  leading-tight max-w-2xl ml-24  text-blue-800 pt-42 text-5xl font-body font-[800]" id="intro-text">
-      Your one-stop platform <br/>for college startup<br/> success.
+  <section id="intro" class="flex flex-row items-center h-[100vh]">
+    <div class="w-1/2">
+      <div class="container  leading-tight max-w-2xl ml-24  text-blue-800 pt-42 text-5xl font-body font-[800]"
+        id="intro-text">
+        Your one-stop platform <br />for college startup<br /> success.
+      </div>
+      <div class="ml-[100px] mt-8">
+        <button class="bg-blue-800 text-white font-body py-1 px-4 text-2xl font-bold rounded-md">Apply</button>
+      </div>
     </div>
-    <div class="ml-[100px] mt-8">
-      <button class="bg-blue-800 text-white font-body py-1 px-4 text-2xl font-bold rounded-md">Apply</button>
+    <div class="w-1/2  pb-4">
+      <video src="img/homepage.mp4" class="border-none w-64 mx-auto" muted loop autoplay></video>
     </div>
   </section>
 
@@ -104,16 +108,16 @@
   </footer> -->
 
   <script>
-  const btn = document.getElementById('menu-btn')
+    const btn = document.getElementById('menu-btn')
     const nav = document.getElementById('menu')
-    
+
     btn.addEventListener('click', () => {
       btn.classList.toggle('open')
       nav.classList.toggle('flex')
       nav.classList.toggle('hidden')
     })
-   
-     
+
+
   </script>
 </body>
 
