--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <body class="bg-white">
   <!-- NavBar -->
   <nav
-    class="px-4 flex items-center justify-between pt-4 pb-4  mx-auto bg-white fixed top-0 left-0 right-0 z-50 backdrop-blur-xl ">
+    class="px-4 flex items-center justify-between pt-4 pb-4  mx-auto  fixed top-0 left-0 right-0 z-50 backdrop-blur-xl ">
     <div class="max-w-1/3">
       <a href="./index.html">
-        <img src="img/logo.png" class="w-[250px]" alt="">
+        <img src="img/logo-new.png" class="w-[250px]" alt="">
       </a>
     </div>
     <div class="hidden container  font-regular flex-row items-center pr-14 justify-center space-x-10 md:flex max-w-1/3">
@@ -54,17 +54,58 @@
   <!-- Intro Section -->
   <section id="intro" class="flex flex-row items-center h-[100vh]">
     <div class="w-1/2">
-      <div class="container  leading-tight max-w-2xl ml-24  text-blue-800 pt-42 text-5xl font-body font-[800]"
+      <div class="container  leading-tight max-w-2xl ml-24  text-darkBlue pt-42 text-5xl font-body font-[800]"
         id="intro-text">
-        Your one-stop platform <br />for college startup<br /> success.
+        Your one-stop platform <br /> <span class="text-medBlue">  for college startup</span><br /> success.
       </div>
-      <div class="ml-[100px] mt-8">
-        <button class="bg-blue-800 text-white font-body py-1 px-4 text-2xl font-bold rounded-md">Apply</button>
+      <div class=" bg-[#0d37a1] ml-[100px] mt-8  w-[130px] h-[50px] button-container">
+        <button class=" text-white font-body  text-[18px]    w-full h-[45px] "
+        id="button-apply" >Apply</button>
       </div>
     </div>
     <div class="w-1/2  pb-4">
       <video src="img/homepage.mp4" class="border-none w-64 mx-auto" muted loop autoplay></video>
     </div>
+  </section>
+
+
+  <section id="service">
+    <div class=" mx-auto h-[100vh] ">
+      <!-- <div class="mx-auto"> -->
+      <!-- <h1 > Why Choose Us?</h1> -->
+      <div class="section-head">
+      <div class="text-cc text-center text-4xl font-medium font-body mb-10">Why Choose Us?</div>
+    <!-- </div> -->
+  <div class="row1-container">
+    <div class="box box-down cyan">
+      <h2 class="text-center">Startup Funding for College Students</h2>
+      <p>Get seed and pre-seed funding for your college startup. Connect with experienced mentors to turn your idea into a successful business. </p>
+      <img class="box-img" src="img/funding.png" alt="">
+    </div>
+
+    <div class="box red">
+      <h2>Mentorship for College Startups</h2>
+      <p>Get expert guidance for your college startup. Our mentors have years of experience in various fields to help you achieve success.
+      </p>
+      <img class="box-img" src="img/mentor.png" alt="">
+    </div>
+
+    <div class="box box-down blue">
+      <h2>Apply for Startup Funding</h2>
+      <p>Don't miss the chance to get the financial support you need to launch your college startup. Easy and straightforward application process.</p>
+      <img class="box-img" src="img/apply.png" alt="">
+    </div>
+  </div>
+  <div class="row2-container">
+    <div class="box orange">
+      <h2>Team Builder</h2>
+      <p>Scans our talent network to create the optimal team for your project</p>
+      <img class="box-img" src="img/team.png" alt="">
+     
+    </div>
+  </div>
+
+  </div>
   </section>
 
   <!-- <footer class="bg-gray-800 text-gray-100 py-2">
@@ -106,19 +147,6 @@
       </div>
     </div>
   </footer> -->
-
-  <script>
-    const btn = document.getElementById('menu-btn')
-    const nav = document.getElementById('menu')
-
-    btn.addEventListener('click', () => {
-      btn.classList.toggle('open')
-      nav.classList.toggle('flex')
-      nav.classList.toggle('hidden')
-    })
-
-
-  </script>
 </body>
 
 </html>
