--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
@@ -20,18 +20,18 @@
   <!--  -->
   <!-- NavBar -->
   <nav
-    class="px-4 flex items-center justify-between pt-4 pb-4  mx-auto  fixed top-0 left-0 right-0 z-50 backdrop-blur-xl ">
+    class="bg-white px-4 flex items-center justify-between pt-4 pb-4  mx-auto  fixed top-0 left-0 right-0 z-50 border-b border-b-gray-200">
     <div class="max-w-1/3">
       <a href="./index.html">
         <img src="img/logo-new.png" class="w-[250px]" alt="">
       </a>
     </div>
-    <div class="hidden container  font-regular flex-row items-center pr-14 justify-center space-x-10 md:flex max-w-1/3">
-      <a href="#" class="hover:font-semibold ">About</a>
-      <a href="./about.html" class="hover:font-semibold ">Portfolio</a>
-      <a href="./contact.html" class="hover:font-semibold ">Team</a>
-      <a href="./contact.html" class="hover:font-semibold ">Network</a>
-      <a href="./contact.html" class="hover:font-semibold ">FAQ</a>
+    <div class="hidden container  font-regular flex-row items-center  justify-center space-x-10 md:flex max-w-1/3">
+      <a href="#" class="link  ">About</a>
+      <a href="./about.html" class="link  ">Resource</a>
+      <a href="#" class="link  ">For Student</a>
+      <a href="./pages/faq.html" class="link  ">FAQ</a>
+      <!-- <a href="#" class="hover:font-semibold ">Network</a> -->
     </div>
     <!-- <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
       <span class="hamburger-top"></span>
@@ -48,20 +48,27 @@
         <a href="#" class="hover:text-darkGrayishBlue link">Contact</a>
     </div> -->
 
-    <div class="max-w-1/3 flex flex-row items-center justify-end pr-8 text font-semibold button-effect">
-      <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button>
+    <div class="max-w-1/3  hidden items-center justify-end pr-4  font-semibold button-effect space-x-4 md:flex">
+      <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
+      <button
+        class="cursor-pointer flex  justify-center items-center font-medium rounded-full  text-white hover:bg-blue-400 bg-lightBlue  text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm ">
+        Apply Now
+      </button>
+      <button
+        class="cursor-pointer flex  justify-center items-center font-medium rounded-full  border border-gray-500 hover:bg-medBlue hover:text-white  text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm ">
+        Become a partner
+      </button>
     </div>
   </nav>
   <!-- Intro Section -->
   <section id="intro" class="flex flex-row items-center h-[100vh]">
     <div class="w-1/2">
-      <div class="container  leading-tight max-w-2xl ml-24  text-darkBlue pt-42 text-5xl font-body font-[800]"
+      <div class="container  leading-tight max-w-2xl ml-24  text-lightBlue  text-6xl font-body font-[600]"
         id="intro-text">
-        Your one-stop platform <br /> <span class="text-medBlue">  for college startup</span><br /> success.
+        Your one-stop platform for <br /> <span class="text-medBlue">college startup</span><br /> success.
       </div>
       <div class=" bg-[#0d37a1] ml-[100px] mt-8  w-[130px] h-[50px] button-container">
-        <button class=" text-white font-body  text-[18px]    w-full h-[45px] "
-        id="button-apply" >Apply</button>
+        <button class=" text-white font-body  text-[18px]    w-full h-[45px] " id="button-apply">Apply</button>
       </div>
     </div>
     <div class="w-1/2  pb-4">
@@ -71,83 +78,68 @@
 
 
   <section id="service">
-    <div class=" mx-auto h-[100vh] ">
+    <div class=" mx-auto h-[100vh] mb-16">
       <!-- <div class="mx-auto"> -->
       <!-- <h1 > Why Choose Us?</h1> -->
       <div class="section-head">
-      <div class="text-cc text-center text-4xl font-medium font-body mb-10">Why Choose Us?</div>
-    <!-- </div> -->
-  <div class="row1-container">
-    <div class="box box-down cyan">
-      <h2 class="text-center">Startup Funding for College Students</h2>
-      <p>Get seed and pre-seed funding for your college startup. Connect with experienced mentors to turn your idea into a successful business. </p>
-      <img class="box-img" src="img/funding.png" alt="">
-    </div>
+        <div class="text-center text-5xl font-bold text-lightBlue font-body mb-10">Why Choose Us?</div>
+        <!-- </div> -->
+        <div class="row1-container">
+          <div class="box box-down cyan">
+            <h2 class="text-center">Startup Funding for College Students</h2>
+            <p>Get seed and pre-seed funding for your college startup. Connect with experienced mentors to turn your
+              idea into a successful business. </p>
+            <img class="box-img" src="img/funding.png" alt="">
+          </div>
 
-    <div class="box red">
-      <h2>Mentorship for College Startups</h2>
-      <p>Get expert guidance for your college startup. Our mentors have years of experience in various fields to help you achieve success.
-      </p>
-      <img class="box-img" src="img/mentor.png" alt="">
-    </div>
+          <div class="box red">
+            <h2>Mentorship for College Startups</h2>
+            <p>Get expert guidance for your college startup. Our mentors have years of experience in various fields to
+              help you achieve success.
+            </p>
+            <img class="box-img" src="img/mentor.png" alt="">
+          </div>
 
-    <div class="box box-down blue">
-      <h2>Apply for Startup Funding</h2>
-      <p>Don't miss the chance to get the financial support you need to launch your college startup. Easy and straightforward application process.</p>
-      <img class="box-img" src="img/apply.png" alt="">
-    </div>
-  </div>
-  <div class="row2-container">
-    <div class="box orange">
-      <h2>Team Builder</h2>
-      <p>Scans our talent network to create the optimal team for your project</p>
-      <img class="box-img" src="img/team.png" alt="">
-     
-    </div>
-  </div>
+          <div class="box box-down blue">
+            <h2>Apply for Startup Funding</h2>
+            <p>Don't miss the chance to get the financial support you need to launch your college startup. Easy and
+              straightforward application process.</p>
+            <img class="box-img" src="img/apply.png" alt="">
+          </div>
+        </div>
+        <div class="row2-container">
+          <div class="box orange">
+            <h2>Team Builder</h2>
+            <p>Scans our talent network to create the optimal team for your project</p>
+            <img class="box-img" src="img/team.png" alt="">
 
-  </div>
+          </div>
+        </div>
+
+      </div>
   </section>
 
-  <!-- <footer class="bg-gray-800 text-gray-100 py-2">
-    <div class="container mx-auto flex items-center justify-between">
-      <div class="w-full md:w-1/3 px-4">
-        <p class="mt-4 text-sm text-overlay">
-          Designed and Developed by Yash Rajoria
-        </p>
+  <footer class="bg-gray-800 text-gray-100 py-2">
+    <div class="footer">
+      <div class="row">
+        <a href="#" id="facebook"><i class="fab fa-facebook"></i></a>
+        <a href="#" id="instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" id="youtube"><i class="fab fa-youtube"></i></a>
+        <a href="#" id="twitter"><i class="fab fa-twitter"></i></a>
       </div>
-      <div class="w-full md:w-1/3 px-4">
-        <p class="mt-4 text-sm text-overlay text-center">
-          Copyright © 2023 YR
-        </p>
-      </div>
-      <div class="w-full md:w-1/3 px-4">
-        <ul class="mt-4 leading-loose text-sm flex gap-4 justify-end">
-          <li>
-            <a class="text-gray-400 hover:text-gray-100" href="https://twitter.com/Yash_123e">
-              <i class="fab fa-twitter fa-lg"></i>
-            </a>
-          </li>
-          <li>
-            <a class="text-gray-400 hover:text-gray-100" href="https://github.com/yashrajoria03">
-              
-              <i class="fab fa-github fa-lg"></i>
-            </a>
-          </li>
-          <li>
-            <a class="text-gray-400 hover:text-gray-100" href="https://www.linkedin.com/in/yash-rajoria-34aa90232/">
-              <i class="fab fa-linkedin-in fa-lg"></i>
-            </a>
-          </li>
-          <li>
-            <a class="text-gray-400 hover:text-gray-100" href="https://www.instagram.com/yashu_123e/">
-              <i class="fab fa-instagram fa-lg"></i>
-            </a>
-          </li>
+
+      <div class="row">
+        <ul>
+          <li><a href="#">Contact us</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">FAQ</a></li>
+          <!-- <li><a href="#">Terms & Conditions</a></li> -->
+          <li><a href="#">Career</a></li>
         </ul>
       </div>
-    </div>
-  </footer> -->
-</body>
 
-</html>
+      <div class="row">
+        Seedsnitch Copyright © 2023 All rights reserved
+      </div>
+    </div>
+  </footer>
