--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+    crossorigin="anonymous" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
@@ -51,31 +54,50 @@
     <div class="max-w-1/3  hidden items-center justify-end pr-4  font-semibold button-effect space-x-4 md:flex">
       <!-- <button class="rounded-md border border-black  px-4 py-1 text-center effect effect-5" id="button">Apply</button> -->
       <button
-        class="cursor-pointer flex  justify-center items-center font-medium rounded-full  text-white hover:bg-blue-400 bg-lightBlue  text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm ">
+        class="cursor-pointer flex  justify-center items-center font-medium rounded-md  text-white hover:bg-blue-400 bg-lightBlue  text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm ">
         Apply Now
       </button>
       <button
-        class="cursor-pointer flex  justify-center items-center font-medium rounded-full  border border-gray-500 hover:bg-medBlue hover:text-white  text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm ">
+        class="cursor-pointer flex  justify-center items-center font-medium rounded-md  border border-gray-500 hover:bg-medBlue hover:text-white  text-xs shrink-0 py-2 px-3 md:py-2 md:px-6 md:text-sm ">
         Become a partner
       </button>
     </div>
   </nav>
   <!-- Intro Section -->
-  <section id="intro" class="flex flex-row items-center h-[100vh]">
+  <section id="intro" class="flex flex-row items-center h-[100vh] ">
     <div class="w-1/2">
-      <div class="container  leading-tight max-w-2xl ml-24  text-lightBlue  text-6xl font-body font-[600]"
+      <div class="container pt-22  leading-tight max-w-2xl ml-24  text-lightBlue  text-5xl font-body font-black"
         id="intro-text">
-        Your one-stop platform for <br /> <span class="text-medBlue">college startup</span><br /> success.
+        Your one-stop platform<br/>  <span class="text-medBlue"> for college startup</span><br /> success.
       </div>
       <div class=" bg-[#0d37a1] ml-[100px] mt-8  w-[130px] h-[50px] button-container">
-        <button class=" text-white font-body  text-[18px]    w-full h-[45px] " id="button-apply">Apply</button>
+        <button class=" text-white font-body  text-[16px]    w-full h-[45px] " id="button-apply">Apply</button>
       </div>
     </div>
-    <div class="w-1/2  pb-4">
+    <div class="w-1/2  ">
       <video src="img/homepage.mp4" class="border-none w-64 mx-auto" muted loop autoplay></video>
     </div>
   </section>
 
+  <section id="about" class="h-[80vh]">
+    <div class="container mx-auto h-full  w-full  relative mb-24    ">
+      <div class="w-40 h-40 bg-yellow-400 absolute top-6 "></div>
+      <div class="h-36 w-auto absolute top-16 left-[80px]  px-4 ">
+        <h1 class="text-5xl font-bold max-w-[200px] font-body ">Who Are We?</h1>
+      </div>
+      <p class="w-[300px] mt-10 absolute top-40 left-4 ">SeedSnitch is a platform that supports college entrepreneurs
+        through mentorship, a cohort program and campus representation. It aims to aid in turning business ideas into
+        successful ventures. It provides a comprehensive solution to the challenges that college students face while
+        starting their own businesses and entrepreneurial journey.
+        <a href="./pages/about.html"> <button
+          class="text-white bg-black rounded-md p-2 mt-2 text-[16px] hover:bg-veryDarkBlue">Learn
+          More </button></a>
+      </p>
+    
+      
+          <img src="../img/about-2.png" alt="" class="absolute -top-4 -right-6 w-[700px] h-[500px] object-cover">
+    </div>
+  </section>
 
   <section id="service">
     <div class=" mx-auto h-[100vh] mb-16">
@@ -89,7 +111,7 @@
             <h2 class="text-center">Startup Funding for College Students</h2>
             <p>Get seed and pre-seed funding for your college startup. Connect with experienced mentors to turn your
               idea into a successful business. </p>
-            <img class="box-img" src="img/funding.png" alt="">
+            <img class="box-img" src="img/funding.png" alt="" >
           </div>
 
           <div class="box red">
