--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
-  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="../css/main.css" />
   <title>seedsnitch</title>
 </head>
 
@@ -89,69 +89,6 @@
     </div>
   </section>
 
-  <section id="about" class="h-[80vh] bg-slate-100">
-    <div class="w-1/2">
-      <img src="img/about.png"class=" w-[300px]" alt="">
-    </div>
-    <!-- <div class="container mx-auto h-full  w-full  relative mb-24    ">
-      <div class="w-40 h-40 bg-yellow-400 absolute top-6 "></div>
-      <div class="h-36 w-auto absolute top-16 left-[80px]  px-4 ">
-        <h1 class="text-5xl font-bold max-w-[200px] font-body ">Who Are We?</h1>
-      </div>
-      <p class="w-[300px] mt-10 absolute top-40 left-4 ">SeedSnitch is a platform that supports college entrepreneurs
-        through mentorship, a cohort program and campus representation. It aims to aid in turning business ideas into
-        successful ventures. It provides a comprehensive solution to the challenges that college students face while
-        starting their own businesses and entrepreneurial journey.
-        <a href="./pages/about.html"> <button
-          class="text-white bg-black rounded-md p-2 mt-2 text-[16px] hover:bg-veryDarkBlue">Learn
-          More </button></a>
-      </p>
-    
-      
-          <img src="../img/about-2.png" alt="" class="absolute -top-4 -right-6 w-[700px] h-[500px] object-cover">
-    </div> -->
-  </section> 
-
-  <section id="service">
-    <div class=" mx-auto h-[100vh] mb-16">
-       <div class="mx-auto"> 
-  <div class="section-head">
-    <div class="text-center text-5xl font-bold text-darkBlue font-body mt-12 mb-10">Why Choose Us?</div>
-    <div class="row1-container">
-      <div class="box box-down cyan">
-        <h2 class="text-center">Startup Funding for College Students</h2>
-        <p>Get seed and pre-seed funding for your college startup. Connect with experienced mentors to turn your
-          idea into a successful business. </p>
-        <img class="box-img" src="img/funding.png" alt="">
-      </div>
-
-      <div class="box red">
-        <h2>Mentorship for College Startups</h2>
-        <p>Get expert guidance for your college startup. Our mentors have years of experience in various fields to
-          help you achieve success.
-        </p>
-        <img class="box-img" src="img/mentor.png" alt="">
-      </div>
-
-      <div class="box box-down blue">
-        <h2>Apply for Startup Funding</h2>
-        <p>Don't miss the chance to get the financial support you need to launch your college startup. Easy and
-          straightforward application process.</p>
-        <img class="box-img" src="img/apply.png" alt="">
-      </div>
-    </div>
-    <div class="row2-container">
-      <div class="box orange">
-        <h2>Team Builder</h2>
-        <p>Scans our talent network to create the optimal team for your project</p>
-        <img class="box-img" src="img/team.png" alt="">
-
-      </div>
-    </div>
-
-  </div>
-  </section>
-
   <footer class="bg-[#0f6d6d] text-white py-2">
     <div class="footer">
       <div class="row">
@@ -163,9 +100,9 @@
 
       <div class="row">
         <ul>
-          <li><a href="#">Contact us</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">FAQ</a></li>
+          <li><a href="./contact.html">Contact us</a></li>
+          <li><a href="./about.html">About us</a></li>
+          <li><a href="./faq.html">FAQ</a></li>
           <!-- <li><a href="#">Terms & Conditions</a></li> -->
           <li><a href="#">Career</a></li>
         </ul>
