--- a/pages/contact.html
+++ b/pages/contact.html
@@ -107,7 +107,7 @@
         <div
           class="w-[350px] rounded-md backdrop-blur-md mx-auto form border border-gray-300"
         >
-          <form class="w-full max-w-lg p-4 h-auto">
+          <form class="w-full max-w-lg px-4 py-6 h-auto">
             <div class="flex flex-wrap -mx-3 mb-6">
               <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
                 <label
@@ -195,14 +195,20 @@
             class="bg-transparent p-2 flex flex-col justify-center items-start text-left"
           >
             <div>
-              <p class="text-2xl font-semibold mb-4">Contact info</p>
+              <p class="text-2xl font-semibold mb-4">
+                You can also reach out on
+              </p>
               <div>
                 <div>
-                  <p><b>Office: </b>BITS Pilani, Rajasthan Campus</p>
-                  <p>P. O. Box No. - 1100XX&nbsp;</p>
-                  <p>Rajasthan, India</p>
-                  <p><b>Phone:</b>&nbsp;+9714 4200 700&nbsp;</p>
-                  <p><b>Email:</b>&nbsp;seedsnitch@abc.com&nbsp;</p>
+                  <!-- <p><b>Office: </b>BITS Pilani, Rajasthan Campus</p> -->
+                  <!-- <p>P. O. Box No. - 1100XX&nbsp;</p> -->
+                  <!-- <p>Rajasthan, India</p> -->
+                  <p class="font-medium text-center">
+                    Phone:&nbsp;+91 8144200700&nbsp;
+                  </p>
+                  <p class="font-medium text-center">
+                    Email:&nbsp;seedsnitch@abc.com&nbsp;
+                  </p>
                 </div>
                 <p>&nbsp;</p>
               </div>
@@ -245,7 +251,7 @@
     <footer class="bg-gray-800 text-gray-100 py-2">
       <div class="footer">
         <div class="row">
-          <a href="#" id="facebook"><i class="fab fa-facebook"></i></a>
+          <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
           <a href="#" id="instagram"><i class="fab fa-instagram"></i></a>
           <a href="#" id="youtube"><i class="fab fa-youtube"></i></a>
           <a href="#" id="twitter"><i class="fab fa-twitter"></i></a>
