--- a/pages/faq.html
+++ b/pages/faq.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FAQ</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../css/main.css" />
+    <title>FAQ | Seedsnitch</title>
   </head>
 
   <body>
@@ -60,11 +82,7 @@
 
     <section id="faq">
       <div id="faq" class="faq-body">
-        <img
-          src="https://img.freepik.com/free-vector/tiny-people-sitting-standing-near-giant-faq_74855-7879.jpg?w=1060&t=st=1674060527~exp=1674061127~hmac=23c3fe8825c1eb6c894fa6e07a7640713277d33af8cadcac871f9063f5a8d570"
-          id="faq-image"
-          alt=""
-        />
+        <img src="../img/faq.jpg" id="faq-image" alt="" />
         <!-- <div class="faq-header">
           <h3 class="faq-title font-body">FAQ's</h3>
           <div class="seperator"></div>
@@ -179,6 +197,29 @@
         </div>
       </div>
     </section>
+    <footer class="bg-gray-800 text-gray-100 py-2">
+      <div class="footer">
+        <div class="row">
+          <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
+          <a href="#" id="instagram"><i class="fab fa-instagram"></i></a>
+          <a href="#" id="youtube"><i class="fab fa-youtube"></i></a>
+          <a href="#" id="twitter"><i class="fab fa-twitter"></i></a>
+        </div>
+
+        <div class="row">
+          <ul>
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">FAQ</a></li>
+            <!-- <li><a href="#">Terms & Conditions</a></li> -->
+            <li><a href="#">Career</a></li>
+          </ul>
+        </div>
+
+        <div class="row">Seedsnitch Copyright © 2023 All rights reserved</div>
+      </div>
+    </footer>
+
     <script>
       var x = document.getElementById("navbar");
       window.onscroll = function () {
