--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About | Seedsnitch</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../css/main.css" />
+    <title>About | Seedsnitch</title>
   </head>
 
   <body>
@@ -88,41 +110,18 @@
     <div class="w-full mx-auto flex flex-col items-center justify-center">
       <img
         src="../img/help.jpg"
-        class="hidden md:w-full md:max-w-full md:block items-start"
+        class="hidden object-fill md:max-w-full md:block items-start"
         alt="we are seedsnitch"
       />
-      <hr class="h-px w-2/3 my-4 bg-[#242424] border-0" />
+      <hr class="h-px w-2/3 mt-10 bg-[#242424] border-0" />
     </div>
-    <!-- <section class="gap-8 max-w-1/2 flex flex-row items-start">
-      <div class="space-y-2 w-1/2">
-        <h2 class="font-bold text-[#f57456] text-3xl text-center">
-          Our Mission
-        </h2>
-        <p class="text-sm text-[20px] md:text-md text-left p-4">
-          To provide comprehensive support to college students looking to launch
-          their own businesses by connecting them with mentors, funding, and
-          resources to turn their ideas into successful ventures.
-        </p>
-      </div>
-    </section>
-    <section class="gap-8 max-w-1/2 flex flex-row-reverse mt-4">
-      <div class="space-y-2 w-1/2">
-        <h2 class="font-bold text-[#f57456] text-3xl text-center">
-          Our Vision
-        </h2>
-        <p class="text-sm text-[20px] md:text-md p-4 text-left">
-          To create a strong community of college startup founders and to
-          empower the next generation of entrepreneurs to make their mark on the
-          world.
-        </p>
-      </div>
-    </section> -->
+
     <section
       id="about2"
-      class="mx-auto container flex flex-col items-center gap-6 py-10 md:gap-16 md:pt-8"
+      class="mx-auto container gap-6 py-10 md:gap-16 md:pt-8"
     >
       <div
-        class="container mb-3 mx-auto flex flex-col items-center justify-center pb-10 mt-4 space-y-4 md:space-x-4 md:flex-row md:px-6"
+        class="container mb-3 mx-auto flex flex-col items-center justify-center pb-10 mt-4 space-y-4 md:space-x-4 md:flex-row-reverse md:px-6"
       >
         <div class="container w-1/2 flex flex-row-reverse items-center">
           <h1
@@ -136,11 +135,13 @@
           <p
             class="font-normal text-[16px] text-center md:text-left italic md:pl-12 max-w-md"
           >
+            <!-- <blockquote> -->
             Our dedication to fostering the success of young entrepreneurs is
             deeply rooted. We are passionate about helping young people succeed.
             We offer a wide range of services to help startups succeed,
             including seed funding and pre-seed fuasdsanding opportunities,
             mentorship, and guidance from experienced entrepreneurs.
+            <!-- </blockquote> -->
           </p>
         </div>
       </div>
