--- a/pages/contact.html
+++ b/pages/contact.html
@@ -83,16 +83,19 @@
     </nav>
     <!-- Intro Section -->
     <section
-      class="mt-20 gap-x-8 h-[40vh] md:flex-row md:gap-x-16 bg-[#cef5ee]"
+      class="mt-20 gap-x-8 h-[40vh] md:flex-row md:gap-x-16 bg-[#eeefef]"
     >
+      <!-- #ffdad1-->
       <div
         class="text-center w-full h-full mx-auto flex flex-col items-center justify-start pt-12"
       >
         <div class="w-[800px]">
-          <h2 class="font-bold text-[#f57456] text-4xl pb-2">
+          <h2 class="font-black text-5xl pb-2 text-[#242424]">
+            <!-- text-[#f57456] -->
             Get in touch with us
           </h2>
-          <h2 class="text-2xl font-semibold text-[#242424]">
+          <h2 class="text-2xl font-semibold text-accent">
+            <!--text-[#242424]-->
             Our team is always ready to lend a helping hand and engage in a
             creative dialogue with you.
           </h2>
@@ -247,11 +250,10 @@
         </div> -->
       <!-- </div> -->
     </section>
-
-    <footer class="bg-gray-800 text-gray-100 py-2">
+    <footer class="bg-[#0f6d6d] text-white py-2">
       <div class="footer">
         <div class="row">
-          <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
+          <a href="#" id=""><i class="fab fa-linkedin"></i></a>
           <a href="#" id="instagram"><i class="fab fa-instagram"></i></a>
           <a href="#" id="youtube"><i class="fab fa-youtube"></i></a>
           <a href="#" id="twitter"><i class="fab fa-twitter"></i></a>
