--- a/pages/faq.html
+++ b/pages/faq.html
@@ -162,23 +162,6 @@
           <div>
             <details>
               <summary
-                title="What is the cohort program run by Seedsnitch, and do you take any cohort fees?
-                  "
-              >
-                What is the cohort program run by Seedsnitch, and do you take
-                any cohort fees?
-              </summary>
-              <p class="faq-content">
-                The cohort program is offered 2-3 times per year and is
-                completely free to participants. All the selected applications
-                are part of the cohort. We believe that providing free resources
-                and support is the best way to help founders succeed.
-              </p>
-            </details>
-          </div>
-          <div>
-            <details>
-              <summary
                 title="I have no background in running a business. Will that affect my application for shortlisting? 
                   "
               >
@@ -194,13 +177,30 @@
               </p>
             </details>
           </div>
+          <div>
+            <details>
+              <summary
+                title="What is the cohort program run by Seedsnitch, and do you take any cohort fees?
+                  "
+              >
+                What is the cohort program run by Seedsnitch, and do you take
+                any cohort fees?
+              </summary>
+              <p class="faq-content">
+                The cohort program is offered 2-3 times per year and is
+                completely free to participants. All the selected applications
+                are part of the cohort. We believe that providing free resources
+                and support is the best way to help founders succeed.
+              </p>
+            </details>
+          </div>
         </div>
       </div>
     </section>
-    <footer class="bg-gray-800 text-gray-100 py-2">
+    <footer class="bg-[#0f6d6d] text-white py-2">
       <div class="footer">
         <div class="row">
-          <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
+          <a href="#" id=""><i class="fab fa-linkedin"></i></a>
           <a href="#" id="instagram"><i class="fab fa-instagram"></i></a>
           <a href="#" id="youtube"><i class="fab fa-youtube"></i></a>
           <a href="#" id="twitter"><i class="fab fa-twitter"></i></a>
