--- a/pages/about.html
+++ b/pages/about.html
@@ -82,74 +82,103 @@
     <section
       class="mx-auto container flex flex-col items-center mt-16 yellow gap-6 py-10 md:gap-16 md:pt-8"
     >
+      <!-- <img
+        src="../img/about.jpg"
+        class="hidden object-fill md:max-w-md md:block"
+        alt="we are seedsnitch"
+      /> -->
       <div
         class="flex flex-col items-center justify-evenly mt-4 space-y-4 md:space-x-4 md:flex-row md:px-6"
       >
-        <div class="container mx-auto w-1/2 px-2">
-          <h1
+        <div class="container mx-auto w-full px-4 md:w-1/2">
+          <!-- <h1
             class="text-3xl font-bold text-center text-[#242424] md:leading-[3.4rem] w-full md:text-5xl md:text-left"
           >
             Supporting College Students in
             <span class="text-[#0fcab2]">
               Launching Successful Business Ventures</span
             >
-          </h1>
+          </h1> -->
+          <img
+            src="../img/about.jpg"
+            class="object-fill md:max-w-md md:block items-start"
+            alt="we are seedsnitch"
+          />
         </div>
-        <div class="container w-1/2 px-2 flex flex-row items-center">
+        <div class="container w-full flex flex-row items-center md:w-1/2 px-4">
           <p
-            class="font-normal text-[16px] text-center md:text-left md:pt-24 italic md:pl-12 max-w-md"
+            class="font-normal text-[16px] text-center md:text-left italic md:pl-12 max-w-lg"
           >
-            Seedsnitch is a platform dedicated to helping college students
-            transform their ideas into successful ventures. we are here to
-            bridge the gap through guidance and resources essential to
-            overcoming them.
+            We are SeedSnitch, a platform dedicated to helping college students
+            transform their ideas into successful ventures. We are aware of the
+            unique challenges that a student might come across while starting
+            up, and we are here to bridge the gap through guidance and resources
+            essential to overcoming them. Our dedication to fostering the
+            success of young entrepreneurs is deeply rooted. We are passionate
+            about helping young people succeed. We offer a wide range of
+            services to help startups succeed, including seed funding and
+            pre-seed funding opportunities, mentorship, and guidance from
+            experienced entrepreneurs. We are a community with a stern belief
+            that when entrepreneurs come together to share their share of
+            experiences and support, great things happen. So, whether you are
+            just starting out or are well on your way to building the next big
+            thing, join us on this thriving journey and let us help turn your
+            dreams into reality. With SeedSnitch, the possibilities are endless.
+            guidance and resources essential to overcoming them.
           </p>
         </div>
       </div>
     </section>
     <div class="w-full mx-auto flex flex-col items-center justify-center">
-      <img
-        src="../img/help.jpg"
-        class="hidden object-fill md:max-w-full md:block items-start"
-        alt="we are seedsnitch"
-      />
       <hr class="h-px w-2/3 mt-10 bg-[#242424] border-0" />
     </div>
 
-    <section
-      id="about2"
-      class="mx-auto container gap-6 py-10 md:gap-16 md:pt-8"
-    >
-      <div
-        class="container mb-3 mx-auto flex flex-col items-center justify-center pb-10 mt-4 space-y-4 md:space-x-4 md:flex-row-reverse md:px-6"
-      >
-        <div class="container w-1/2 flex flex-row-reverse items-center">
-          <h1
-            class="text-3xl font-bold text-center text-[#242424] md:leading-[3.4rem] w-full md:text-5xl md:text-left"
-          >
-            Far beyond just a platform,
-            <span class="text-accent"> We are a community</span>
-          </h1>
-        </div>
-        <div class="container w-1/2 flex flex-row items-center italic">
-          <p
-            class="font-normal text-[16px] text-center md:text-left italic md:pl-12 max-w-md"
-          >
-            <!-- <blockquote> -->
-            Our dedication to fostering the success of young entrepreneurs is
-            deeply rooted. We are passionate about helping young people succeed.
-            We offer a wide range of services to help startups succeed,
-            including seed funding and pre-seed fuasdsanding opportunities,
-            mentorship, and guidance from experienced entrepreneurs.
-            <!-- </blockquote> -->
-          </p>
-        </div>
+    <section id="service">
+      <div class="text-center text-5xl font-bold text-[#242424] mb-8">
+        <span class="text-accent"> Why</span> Choose Us?
       </div>
+
+      <main>
+        <p>
+          <img src="../img/choose1.png" alt="" class="absolute -left-64 w-56" />
+          Seed funding and pre-seed funding opportunities: We provide the
+          initial funding needed to get your business off the ground and help
+          you with your first steps of execution.
+        </p>
+        <p>
+          <img
+            src="../img/choose2.png"
+            alt=""
+            class="absolute -right-64 w-56"
+          />
+          Mentorship and guidance from experienced entrepreneurs: Our team of
+          experienced entrepreneurs, industry professionals, and educators
+          provides guidance and support to help you navigate the startup world
+          and achieve your goals.
+        </p>
+        <p>
+          <img
+            src="../img/calendar.png"
+            alt=""
+            class="absolute -left-64 w-40"
+          />
+          8-week cohort program: Our comprehensive 8-week cohort program covers
+          everything from ideation to execution to accelerated growth and
+          prepares you for the startup world.
+        </p>
+
+        <p>
+          <img src="../img/campus.png" alt="" class="absolute -right-64 w-56" />
+          Campus ambassador program: A program open to all college students,
+          this program is a great way to gain valuable experience in the startup
+          world, network with like-minded individuals, and earn extra money.
+        </p>
+      </main>
     </section>
     <footer class="bg-[#0f6d6d] text-white py-2">
       <div class="footer">
         <div class="row">
-          <a href="#" id=""><i class="fab fa-linkedin"></i></a>
+          <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
           <a href="#" id="instagram"><i class="fab fa-instagram"></i></a>
           <a href="#" id="youtube"><i class="fab fa-youtube"></i></a>
           <a href="#" id="twitter"><i class="fab fa-twitter"></i></a>
