--- a/pages/contact.html
+++ b/pages/contact.html
@@ -90,11 +90,11 @@
         class="text-center w-full h-full mx-auto flex flex-col items-center justify-start pt-12"
       >
         <div class="w-[800px]">
-          <h2 class="font-black text-5xl pb-2 text-[#242424]">
+          <h2 class="font-black text-5xl pb-2 text-accent">
             <!-- text-[#f57456] -->
             Get in touch with us
           </h2>
-          <h2 class="text-2xl font-semibold text-accent">
+          <h2 class="text-2xl font-semibold text-[#242424]">
             <!--text-[#242424]-->
             Our team is always ready to lend a helping hand and engage in a
             creative dialogue with you.
@@ -103,14 +103,14 @@
       </div>
     </section>
 
-    <section id="about-container" class="h-[490px] py-6 px-2 relative mb-12">
+    <section id="about-container" class="h-[590px] px-2 relative mb-12">
       <div
         class="h-full w-full flex flex-col gap-4 justify-between md:flex-row absolute -top-4 right-4"
       >
         <div
-          class="w-[350px] rounded-md backdrop-blur-md mx-auto form border border-gray-300"
+          class="w-[400px] h-full rounded-md backdrop-blur-md mx-auto form border-t border-t-gray-200"
         >
-          <form class="w-full max-w-lg px-4 py-6 h-auto">
+          <form class="w-full h-full max-w-lg px-4 py-6">
             <div class="flex flex-wrap -mx-3 mb-6">
               <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
                 <label
@@ -160,7 +160,24 @@
               </div>
             </div>
             <div class="flex flex-wrap -mx-3 mb-2">
-              <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+              <div class="w-full md:w-full px-3">
+                <label
+                  class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                  for="grid-subject"
+                >
+                  Subject
+                </label>
+                <input
+                  class="appearance-none block w-full bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                  id="grid-subject"
+                  type="text"
+                  placeholder="Subject"
+                />
+              </div>
+            </div>
+
+            <div class="flex flex-wrap -mx-3 mb-2 mt-8">
+              <div class="w-full md:w-full px-3 mb-6 md:mb-0">
                 <label
                   class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
                   for="grid-message"
@@ -168,7 +185,7 @@
                   Message
                 </label>
                 <textarea
-                  class="bg-gray-100 text-darkBlue border border-grabg-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 w-[320px]"
+                  class="w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                   id="grid-message"
                   placeholder="Enter your message.."
                   rows="7"
@@ -176,10 +193,10 @@
                 ></textarea>
               </div>
             </div>
-            <div class="w-100%">
+            <div class="w-full">
               <div class="w-full flex flex-row items-center">
                 <button
-                  class="shadow color focus:shadow-outline focus:outline-none text-white font-semibold px-3 py-2 rounded w-full bg-accent"
+                  class="shadow color focus:shadow-outline focus:outline-none text-white font-semibold px-3 py-2 rounded w-full bg-accent hover:bg-[#37a697]"
                   type="button"
                 >
                   Send
@@ -253,7 +270,7 @@
     <footer class="bg-[#0f6d6d] text-white py-2">
       <div class="footer">
         <div class="row">
-          <a href="#" id=""><i class="fab fa-linkedin"></i></a>
+          <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
           <a href="#" id="instagram"><i class="fab fa-instagram"></i></a>
           <a href="#" id="youtube"><i class="fab fa-youtube"></i></a>
           <a href="#" id="twitter"><i class="fab fa-twitter"></i></a>
