--- a/pages/about.html
+++ b/pages/about.html
@@ -140,7 +140,11 @@
 
       <main>
         <p>
-          <img src="../img/choose1.png" alt="" class="absolute -left-64 w-56" />
+          <img
+            src="../img/choose1.png"
+            alt=""
+            class="hidden absolute -left-64 w-56 md:block"
+          />
           Seed funding and pre-seed funding opportunities: We provide the
           initial funding needed to get your business off the ground and help
           you with your first steps of execution.
@@ -149,7 +153,7 @@
           <img
             src="../img/choose2.png"
             alt=""
-            class="absolute -right-64 w-56"
+            class="hidden absolute -right-64 w-56 md:block"
           />
           Mentorship and guidance from experienced entrepreneurs: Our team of
           experienced entrepreneurs, industry professionals, and educators
@@ -160,7 +164,7 @@
           <img
             src="../img/calendar.png"
             alt=""
-            class="absolute -left-64 w-40"
+            class="hidden absolute -left-64 w-40 md:block"
           />
           8-week cohort program: Our comprehensive 8-week cohort program covers
           everything from ideation to execution to accelerated growth and
@@ -168,7 +172,11 @@
         </p>
 
         <p>
-          <img src="../img/campus.png" alt="" class="absolute -right-64 w-56" />
+          <img
+            src="../img/campus.png"
+            alt=""
+            class="hidden absolute -right-64 w-56 md:block"
+          />
           Campus ambassador program: A program open to all college students,
           this program is a great way to gain valuable experience in the startup
           world, network with like-minded individuals, and earn extra money.
