--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!--  -->
   <!-- NavBar -->
   <nav
-    class="bg-transparent px-4 flex items-center justify-between pt-4 pb-4  mx-auto  fixed top-0 left-0 right-0 z-50 text-textBlue font-[600]"
+    class="bg-transparent px-4 flex items-center justify-between pt-4 pb-4  mx-auto  fixed top-0 left-0 right-0 z-50 text-textBlue font-[600] navbar-fixed-bottom"
     id="navbar">
     <div class="max-w-1/3">
       <a href="#">
@@ -64,7 +64,7 @@
     </div>
   </nav>
   <!-- Intro Section -->
-  <section id="intro" class=" h-[100vh] w-full overflow-hidden flex flex-col-reverse mt-24  justify-between mb-4 md:flex-row ">
+  <!-- <section id="intro" class=" h-[100vh] w-full overflow-hidden flex flex-col-reverse mt-24  justify-between mb-4 md:flex-row ">
 
     <div class="w-1/2 space-y-8  ">
       <div class="container pt-7   max-w-md ml-16  text-white  text-5xl  font-[800] mt-40  " id="intro-text">
@@ -83,9 +83,26 @@
     <div class="w-1/2 mt-16">
       <img src="img/2.jpg" class="w-full h-auto" alt="">
     </div>
+  </section> -->
+  <section id="intro2" class="w-screen h-fit mb-4 block md:hidden ">
+    <div class="w-full h-fit space-y-12 py-12  flex flex-col items-center justify-center  mt-28 rounded-xl">
+      <div class="container  text-center  text-accent  text-5xl  font-[800] " id="intro-text">
+        <span class="">  Fueling the college startup revolution</span>
+      </div>
+      <div class="text-medBlue font-bold text-center text-[20px] ">
+        <p>We support college entrepreneurs
+          through   <br> mentorship, a cohort  program and <br>campus  representation.</p>
+      </div>
+      <div>
+        <a href="./pages/about.html"> <button
+            class="text-white bg-[#0C6980] rounded-md py-2 px-8 mt-4 text-[16px] hover:bg-[#084352]   ">Learn
+            More </button></a>
+      </div>
+    </div>
+    <!-- <div class="w-full mt-16">
+      <img src="img/2.jpg" class="w-full h-auto" alt="">
+    </div> -->
   </section>
-
-
   
 
   <footer class="bg-[#0f6d6d] text-white py-2">
