--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
   </nav>
   <!-- Intro Section -->
-  <!-- <section id="intro" class=" h-[100vh] w-full overflow-hidden flex flex-col-reverse mt-24  justify-between mb-4 md:flex-row ">
+  <section id="intro" class=" h-[100vh] w-full overflow-hidden flex flex-col-reverse   justify-between mb-4 md:flex-row ">
 
     <div class="w-1/2 space-y-8  ">
       <div class="container pt-7   max-w-md ml-16  text-white  text-5xl  font-[800] mt-40  " id="intro-text">
@@ -83,7 +83,7 @@
     <div class="w-1/2 mt-16">
       <img src="img/2.jpg" class="w-full h-auto" alt="">
     </div>
-  </section> -->
+  </section>
   <section id="intro2" class="w-screen h-fit mb-4 block md:hidden ">
     <div class="w-full h-fit space-y-12 py-12  flex flex-col items-center justify-center  mt-28 rounded-xl">
       <div class="container  text-center  text-accent  text-5xl  font-[800] " id="intro-text">
@@ -98,6 +98,7 @@
             class="text-white bg-[#0C6980] rounded-md py-2 px-8 mt-4 text-[16px] hover:bg-[#084352]   ">Learn
             More </button></a>
       </div>
+      <img src="./img/cover.jpg" alt="">
     </div>
     <!-- <div class="w-full mt-16">
       <img src="img/2.jpg" class="w-full h-auto" alt="">
